--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_Backend_Url = http://localhost:8010
+# REACT_APP_Backend_Url = http://localhost:8010
+
+REACT_APP_Backend_Url = https://conslifeback-zqgemjjh.b4a.run
